# ArangoRDF

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  arangoSemantic.py  arangoSemantics.py  design.md  metamodel.ttl  pyproject.toml  setup.cfg  setup.py  test.py  testRdfsOwlBase.py
.github/workflows/: analyze.yml  build.yml  docs.yaml  release.yml
arango_rdf/: __init__.py  abc.py  controller.py  exception.py  main.py  typings.py  utils.py
arango_rdf/meta/: adb.trig  dc.trig  owl.trig  owl.ttl  rdf.trig  rdf.ttl  rdfs.trig  rdfs.ttl  xsd.trig
arango_rdf/ontologies/: rdfowl.ttl
docs/: arangodb_to_rdf.rst  conf.py  index.rst  mapping.rst  overview.rst  quickstart.rst  rdf_to_arangodb_concurrent.rst  rdf_to_arangodb_lpg.rst  rdf_to_arangodb_pgt.rst  rdf_to_arangodb_rpt.rst  requirements.txt  specs.rst
examples/: ArangoRDF.ipynb
examples/data/: airport-ontology.owl  music_schema.ttl  rdfExport.ttl  rdfExport.xml  sfo-aircraft-partial.ttl
examples/notebook_output/: ArangoRDF_output.ipynb
metadata/: rdfowl.ttl  skos.ttl
tests/: __init__.py  conftest.py  test.py  testRdfsOwlBase.py  test_main.py
tests/data/adb/got_dump/: Characters_994d06622c761cbceb384fd10a0b53f3.structure.json  ChildOf_cb33a0d163cf508838e6b038c7b4d6cf.structure.json  Locations_eebd338ddbd547e41e4a1296de82963a.structure.json  Text_Search.view.json  Traits_42dff6d9ccc56c155188778aff284f7c.structure.json  _analyzers_839c888a45b895a4783b6dbd338f0155.structure.json  _appbundles_105ca6a6a72935fd370f79f3a3e62b0e.structure.json  _apps_c3f2c8489196d21e33f194f4bafb3f05.structure.json  _aqlfunctions_8293af7a2caabc3098bc21db7ce2759d.structure.json  _fishbowl_f8796aecb1ced2b96e78e137824f5e39.structure.json  _frontend_33a4de9a99a6607c1ea19444d2424dee.structure.json  _graphs_c827636f2b54efb49f1f02feeeacfb01.structure.json  _jobs_cf2912aeadc6797e32beffa88f49e6e8.structure.json  _queues_3a31f94fb7e8e2cc4da51136cf39a20b.structure.json  _users_54de7f9c62af75701e427bd5324df754.structure.json  dump.json
tests/data/rdf/: beatles.ttl  bnode.ttl  books.ttl  collection.ttl  container.ttl  disjoint.ttl  foaf.ttl  hierarchy.ttl  key.ttl  reification.ttl
tests/data/rdf/cases/: 1.ttl  10.ttl  11_1.ttl  11_2.ttl  12_1.ttl  12_2.ttl  13.ttl  13_1.ttl  13_2.ttl  14_1.ttl  14_2.ttl  14_3.trig  15.ttl  15_2.ttl  15_3.trig  15_3.ttl  15_4.trig  2_1.ttl  2_2.ttl  2_3.ttl  2_4.ttl  3_1.ttl  3_2.ttl  4.ttl  4_2.ttl  5.ttl  6.trig  7.ttl  8.ttl  9.ttl
